--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 <body>
     <header class="navbar">
         <div class="container">
-            <h1 class="logo">FLAHAUT Axel</h1>
+            <h1 class="logo" >FLAHAUT Axel</h1>
             <nav>
                 <ul class="nav-links">
+                    <li><a href="index.html">Accueil</a></li>
                     <li><a href="about.html">À propos</a></li>
                     <li><a href="services.html">Mes services</a></li>
                     <li><a href="projects.html">Projets</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="burger" id="burger-menu">
+                    <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
