données mise a jour

--- a/about.html
+++ b/about.html
@@ -45,11 +45,10 @@
                     Voici quelques compétences que j'ai acquises au fil de mon parcours :
                 </p>
                 <ul class="skills">
-                    <li>Développement d'applications web et mobiles (React Native, Expo, TypeScript)</li>
-                    <li>Gestion de bases de données (MySQL, SQLite)</li>
-                    <li>Initiation à la cybersécurité et aux réseaux</li>
+                    <li>Développement d'applications web et mobiles </li>
+                    <li>Gestion de bases de données </li>
+                    <li>Initiation aux réseaux</li>
                     <li>Création de projets collaboratifs avec Git et GitHub</li>
-                    <li>Conception de jeux en 2D avec Unity</li>
                 </ul>
                 <p>
                     Je suis toujours prêt à relever de nouveaux défis et à apprendre de nouvelles technologies pour évoluer dans ce domaine en constante mutation.
