--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         <div class="container">
             <h2 class="section-title">À propos de moi</h2>
             <div class="about-content">
-                <img src="profile.jpg" alt="Photo de profil" class="profile-pic">
+                <img src="assets/images/axel.jpg" alt="Photo de profil" class="profile-pic">
                 <p>
                     Je m'appelle <strong>Axel Flahaut</strong>, étudiant en deuxième année à 
                     <strong>EPSI Paris La Défense</strong>, passionné par le développement web, mobile, et la sécurité informatique. 
