lien mis a jour

--- a/projects.html
+++ b/projects.html
@@ -53,35 +53,39 @@
                         <h4>Projet 1 - Site Web</h4>
                         <p>creation d'un site Web marchant</p>
                         <p><strong>Technologies :</strong> PHP, HTML/CSS, SQL</p>
-                        <a href="#" class="btn">Voir plus</a>
+                        <a href="https://github.com/axelinho75/smart-bike" target="_blank" class="btn" >Voir plus</a>
                     </div>
                     <div class="project-card">
                         <img src="projet-scolaire2.jpg" alt="Projet 2" class="project-img">
                         <h4>Projet 2 - SNT-Labo</h4>
                         <p>Devellopement d'une application python avec  interface graphique pour gerer les connexion d'un laboratoire</p>
                         <p><strong>Technologies :</strong>Python</p>
-                        <a href="#" class="btn">Voir plus</a>
+                        <a href="https://github.com/axelinho75/portail-app" target="_blank" class="btn" >Voir plus</a>
+
                     </div>
                     <div class="project-card">
                         <img src="assets/images/ClubFinder.png" alt="Projet 2" class="project-img">
                         <h4>Projet 3 - ClubFinder</h4>
                         <p>Creation d'une application Mobile pour la recherche de boite de nuit</p>
                         <p><strong>Technologies :</strong> React-Native, TypeScript</p>
-                        <a href="#" class="btn">Voir plus</a>
+                        <a href="https://github.com/axelinho75/Club-Finder" target="_blank" class="btn" >Voir plus</a>
+
                     </div>
                     <div class="project-card">
                         <img src="assets/images/twitch.png"  class="project-img">
                         <h4>Projet 4 - BDD Twitch</h4>
                         <p>conception de la base de données de Twitch</p>
                         <p><strong>Technologies :</strong>SQL</p>
-                        <a href="#" class="btn">Voir plus</a>
+                        <a href="https://github.com/axelinho75/BDD-Twitch" target="_blank" class="btn" >Voir plus</a>
+
                     </div>
                     <div class="project-card">
                         <img src="assets/images/PNJ2.png"  class="project-img">
                         <h4>Projet 5 - Student-Life </h4>
                         <p>Creation d'un jeu pour presenter l'ecole</p>
                         <p><strong>Technologies :</strong> Unity 3D, C#</p>
-                        <a href="#" class="btn">Voir plus</a>
+                        <a href="https://github.com/axelinho75/epsi-game" target="_blank" class="btn" >Voir plus</a>
+
                     </div>
                     
                 </div>
