lien ajouter pour contact

--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
             <p>Vous pouvez me contacter via LinkedIn, par mail, ou utiliser le formulaire ci-dessous </p>
             <ul class="contact-info">
                 <li><a href="https://www.linkedin.com/in/axel-flahaut-103726235/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://github.com/axelinho75?tab=repositories" target="_blank">GitHub</a></li>
                 <li><a href="mailto:axel.flahaut@ecoles-epsi.net">axel.flahaut@ecoles-epsi.net</a></li>
             </ul>
             <form class="contact-form">
