--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="about.html">À propos</a></li>
-                    <li><a href="services.html">Mes services</a></li>
                     <li><a href="projects.html">Projets</a></li>
+                    <li><a href="competences.html">Competences</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="burger" id="burger-menu">
