--- a/competences.html
+++ b/competences.html
@@ -6,29 +6,27 @@
     <meta name="description" content="Contactez FLAHAUT Axel - Développeur web et mobile">
     <link rel="stylesheet" href="assets/css/competences.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-    <title> À propos - FLAHAUT Axel</title>
+    <title>À propos - FLAHAUT Axel</title>
 </head>
 
 <body>
     <header class="navbar">
         <div class="container">
-            <h1 class="logo" >FLAHAUT Axel</h1>
+            <h1 class="logo">FLAHAUT Axel</h1>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="about.html">À propos</a></li>
                     <li><a href="projects.html">Projets</a></li>
-                    <li><a href="competences.html">Competences</a></li>
+                    <li><a href="competences.html">Compétences</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="burger" id="burger-menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
-                    <span class="bar"></span>
                 </div>
             </nav>
-
         </div>
     </header>
     
@@ -38,19 +36,19 @@
             <h3 class="sub-title">Langages & Frameworks</h3>
             <div class="skills-grid">
                 <div class="skill-logo">
-                    <img src="assets/images/HTML.png"  class="logo">
+                    <img src="assets/images/HTML.png" class="logo">
                     <p>HTML</p>
                 </div>
                 <div class="skill-logo">
-                    <img src="assets/images/CSS.png"  class="logo">
+                    <img src="assets/images/CSS.png" class="logo">
                     <p>CSS</p>
                 </div>
                 <div class="skill-logo">
-                    <img src="assets/images/PHP.png"  class="logo">
+                    <img src="assets/images/PHP.png" class="logo">
                     <p>PHP</p>
                 </div>
                 <div class="skill-logo">
-                    <img src="assets/images/JS.png"  class="logo">
+                    <img src="assets/images/JS.png" class="logo">
                     <p>JavaScript</p>
                 </div>
                 <div class="skill-logo">
