--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="about.html">À propos</a></li>
                     <li><a href="projects.html">Projets</a></li>
-                    <li><a href="competences.html">Competences</a></li>
+                    <li><a href="competences.html">Compétences</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="burger" id="burger-menu">
@@ -44,18 +44,18 @@
             <h2 class="section-title" data-aos="fade-up">Mes services</h2>
             <div class="service-card">
                 <div class="card" data-aos="flip-left">
-                    <h3>Devellopement WEB</h3>
-                    <p>Création de site WEB moderne et performant</p>
+                    <h3>Développement WEB</h3>
+                    <p>Création de sites WEB modernes et performants</p>
                 </div>
 
                 <div class="card" data-aos="flip-left" data-aos-delay="200">
-                    <h3>Devellopement Mobile</h3>
-                    <p>Création d'application mobile pour Android et iOS</p>
+                    <h3>Développement Mobile</h3>
+                    <p>Création d'applications mobiles pour Android et iOS</p>
                 </div>
 
                 <div class="card" data-aos="flip-left" data-aos-delay="400">
                     <h3>Bases de données</h3>
-                    <p>Création et gestion d'une base de données</p>
+                    <p>Création et gestion de bases de données</p>
                 </div>
             </div>
         </div>
