--- a/projects.html
+++ b/projects.html
@@ -6,29 +6,27 @@
     <meta name="description" content="Contactez FLAHAUT Axel - Développeur web et mobile">
     <link rel="stylesheet" href="assets/css/projects.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-    <title> À propos - FLAHAUT Axel</title>
+    <title>À propos - FLAHAUT Axel</title>
 </head>
 
 <body>
     <header class="navbar">
         <div class="container">
-            <h1 class="logo" >FLAHAUT Axel</h1>
+            <h1 class="logo">FLAHAUT Axel</h1>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="about.html">À propos</a></li>
                     <li><a href="projects.html">Projets</a></li>
-                    <li><a href="competences.html">Competences</a></li>
+                    <li><a href="competences.html">Compétences</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="burger" id="burger-menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
-                    <span class="bar"></span>
                 </div>
             </nav>
-
         </div>
     </header>
     
