--- a/about.html
+++ b/about.html
@@ -12,23 +12,21 @@
 <body>
     <header class="navbar">
         <div class="container">
-            <h1 class="logo" >FLAHAUT Axel</h1>
+            <h1 class="logo">FLAHAUT Axel</h1>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="about.html">À propos</a></li>
                     <li><a href="projects.html">Projets</a></li>
-                    <li><a href="competences.html">Competences</a></li>
+                    <li><a href="competences.html">Compétences</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="burger" id="burger-menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
-                    <span class="bar"></span>
                 </div>
             </nav>
-
         </div>
     </header>
     <section id="about" class="about">
