Experience pro ajouté

--- a/projects.html
+++ b/projects.html
@@ -102,6 +102,12 @@
                         <p>Conception d'une base de données et d'un interface graphique pour gerer les inserts et affichage des tables</p>
                         <p><strong>Technologies :</strong> SQL, Python</p>
                     </div>
+                    <div class="project-card">
+                        <img src="assets/images/ipharm_1.png" class="project-img"> 
+                        <h4>Stage - Creation d'une base de données et d'un logiciel de Gestion</h4>
+                        <p>Creation d'une base de données et d'un logiciel de gestion de pharmacie</p>
+                        <p><strong>Technologies :</strong> HTML, CSS, Javascript </p>
+                    </div>
                     
                 </div>
             </div>
