--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="about.html">À propos</a></li>
+                    <li><a href="parcours.html">Parcours Academique</a></li>
+                    <li><a href="veille.html">Veille</a></li>
                     <li><a href="projects.html">Projets</a></li>
                     <li><a href="competences.html">Compétences</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="burger" id="burger-menu">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
