--- a/parcours.html
+++ b/parcours.html
@@ -44,7 +44,15 @@
             </p>
         </div>
     </section>
-    
+
+    <div class="timeline-item" data-aos="fade-up">
+        <div class="timeline-date">2023 - Présent</div>
+        <div class="timeline-content">
+            <h3>BTS SIO SLAM</h3>
+            <p>Lycée Saint Vincent, Senlis</p>
+            <p>Formation en développement d'applications et services informatiques avec spécialisation en programmation.</p>
+        </div>
+    </div>
 
     <footer class="footer">
         <div class="container">
