--- a/projects.html
+++ b/projects.html
@@ -24,8 +24,8 @@
                     <a href="about.html">À propos</a>
                     <a href="parcours.html">Parcours</a>
                     <a href="competences.html">Compétences</a>
-                    <a href="projects.html" class="active">Projets</a>
-                    <a href="veille.html">Veille</a>
+                    <a href="projects.html">Projets</a>
+                    <a href="veille.html" class="active">Veille</a>
                     <a href="contact.html">Contact</a>
                 </div>
                 <button class="dark-mode-toggle" aria-label="Basculer le mode sombre">
