--- a/competences.html
+++ b/competences.html
@@ -20,12 +20,12 @@
                     <a href="index.html">Axel Flahaut</a>
                 </div>
                 <div class="nav-links">
-                    <a href="index.html" class="active">Accueil</a>
+                    <a href="index.html">Accueil</a>
                     <a href="about.html">À propos</a>
                     <a href="parcours.html">Parcours</a>
                     <a href="competences.html">Compétences</a>
-                    <a href="veille.html">Veille</a>
                     <a href="projects.html">Projets</a>
+                    <a href="veille.html" class="active">Veille</a>
                     <a href="contact.html">Contact</a>
                 </div>
                 <button class="dark-mode-toggle" aria-label="Basculer le mode sombre">
