--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,8 @@
                     <a href="parcours.html">Parcours</a>
                     <a href="competences.html">Compétences</a>
                     <a href="projects.html">Projets</a>
-                    <a href="veille.html">Veille</a>
-                    <a href="contact.html" class="active">Contact</a>
+                    <a href="veille.html" class="active">Veille</a>
+                    <a href="contact.html">Contact</a>
                 </div>
                 <button class="dark-mode-toggle" aria-label="Basculer le mode sombre">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" stroke="currentColor">
