--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                     <a href="index.html">Axel Flahaut</a>
                 </div>
                 <div class="nav-links">
-                    <a href="index.html" class="active">Accueil</a>
+                    <a href="index.html">Accueil</a>
                     <a href="about.html">À propos</a>
                     <a href="parcours.html">Parcours</a>
                     <a href="competences.html">Compétences</a>
-                    <a href="veille.html">Veille</a>
                     <a href="projects.html">Projets</a>
+                    <a href="veille.html" class="active">Veille</a>
                     <a href="contact.html">Contact</a>
                 </div>
                 <button class="dark-mode-toggle" aria-label="Basculer le mode sombre">
@@ -32,7 +32,11 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
                     </svg>
                 </button>
-                
+                <button class="mobile-menu-toggle" aria-label="Menu mobile">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                    </svg>
+                </button>
             </div>
         </nav>
     </header>
